--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>ME!</title>
   </head>
   <body>
-    <h1> Marlene Eddie!</h1>
+    <h1> Marlene Eddie</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
