--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>ME!</title>
+    <title>Marlene's profile</title>
   </head>
   <body>
-    <h1> Marlene Eddie</h1>
-
+    <h1> <img src="images/Professional photo - M Eddie.jpg" width = "80" height = "100" alt="">    Marlene Eddie</h1>
+    <nav class="navbar navbar-light bg-light">
+        <span class="navbar-text">
+          <a href="https://www.Linkedin.com/in/marléne-eddie1988ab139"> LinkedIn </a>
+          <a href="https://www.Linkedin.com/in/marléne-eddie1988ab139"> LinkedIn </a>
+        </span>
+      </nav>
+      
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
