--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h1> <img src="images/Professional photo - M Eddie.jpg" width = "80" height = "100" alt="">    Marlene Eddie</h1>
     <nav class="navbar navbar-light bg-light">
         <span class="navbar-text">
-          <a href="https://www.Linkedin.com/in/marléne-eddie1988ab139"> LinkedIn </a>
-          <a href="https://www.Linkedin.com/in/marléne-eddie1988ab139"> LinkedIn </a>
+          <a href="https://www.Linkedin.com/in/marléne-eddie-1988ab139"> LinkedIn </a>
+          <a href="https://www.https://github.com/MarleneEddie"> Github </a>
         </span>
       </nav>
       
