--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="navbar-text">
             Please follow the links for more information: 
           <a href="https://www.Linkedin.com/in/marléne-eddie-1988ab139"> LinkedIn </a>
-          <a href="github.com/MarleneEddie"> Github </a>
+          <a href="https://github.com/MarleneEddie"> Github </a>
         </span>
       </nav>
       
