--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <div class="col-sm-9 col-8">
           <div id="section1">
             <h1>About Me</h1>
-            <p>Try to scroll this page and look at the menu while scrolling!</p>
+            <p>I am an energetic, detailorientated person who takes responsibility and sees a task through. 
+              As an Engineering graduate, I am looking to gain experience in applying my skills and knowledge in various fields.</p>
           </div>
           <div id="section2">
             <h1>Education</h1>
