--- a/index.html
+++ b/index.html
@@ -49,12 +49,25 @@
         <div class="col-sm-9 col-8">
           <div id="section1">
             <h1>About Me</h1>
-            <p>I am an energetic, detailorientated person who takes responsibility and sees a task through. 
-              As an Engineering graduate, I am looking to gain experience in applying my skills and knowledge in various fields.</p>
+            <p>I am an energetic, detail oriented person who takes responsibility and sees a task through. 
+              As an Engineering graduate, I am looking to gain experience in applying my skills and knowledge in various fields.
+            </p>
+            <p> I am currently part of the BriteHouse 2.0 Graduate program.
+            </p>
           </div>
           <div id="section2">
             <h1>Education</h1>
             <p>Try to scroll this page and look at the menu while scrolling!</p>
+            <p><div class="card" style="width:300px">
+              <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
+              <div class="card-body">
+                <h4 class="card-title">Tertiary Education</h4>
+                <p class="card-text">2019</p>
+                <p> Bachelor of Engineering in Industrial Engineering</p>
+                <a href="#" class="btn btn-primary">See Profile</a>
+              </div>
+            </div>
+          </p>
           </div>
           <div id="section3">
             <h1>Past Projects</h1>
