--- a/index.html
+++ b/index.html
@@ -1,93 +1,117 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Marlene's profile</title>
-  </head>
-  <body>
-    <div class="jumbotron text-center" style="margin-bottom:0" >
-    <h1> <img src="images/Professional photo - M Eddie.jpg" width = "180" height = "250" class="rounded" alt=""> Marléne Eddie</h1>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <title>Marlene's profile</title>
+</head>
+
+<body>
+  <div class="jumbotron text-center" style="margin-bottom:0">
+    <h1> <img src="images/Professional photo - M Eddie.jpg" width="180" height="250" class="rounded" alt=""> Marléne
+      Eddie</h1>
   </div>
-    <nav class="navbar navbar-light bg-light">
-        <span class="navbar-text">
-            Please follow the links for more information: 
-          <a href="https://www.Linkedin.com/in/marléne-eddie-1988ab139"> LinkedIn </a>
-          <a href="https://github.com/MarleneEddie"> Github </a>
-        </span>
-      </nav>
-      
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+  <nav class="navbar navbar-light bg-light">
+    <span class="navbar-text">
+      Please follow the links for more information:
+      <a href="https://www.Linkedin.com/in/marléne-eddie-1988ab139"> LinkedIn </a>
+      <a href="https://github.com/MarleneEddie"> Github </a>
+    </span>
+  </nav>
 
-  <body data-spy="scroll" data-target="#myScrollspy" data-offset="1">
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+</body>
 
-    <div class="container-fluid">
-      <div class="row">
-        <nav class="col-sm-3 col-4" id="myScrollspy">
-          <ul class="nav nav-pills flex-column">
-            <li class="nav-item">
-              <a class="nav-link active" href="#section1">Get To Know Me</a>
-            </li>
-            <li class="nav-item">
+<body data-spy="scroll" data-target="#myScrollspy" data-offset="1">
+
+  <div class="container-fluid">
+    <div class="row">
+      <nav class="col-sm-3 col-4" id="myScrollspy">
+        <ul class="nav nav-pills flex-column">
+          <li class="nav-item">
+            <a class="nav-link active" href="#section1">Get To Know Me</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" href="#section2">Education</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="#section3">Past Projects</a>
           </li>
-          </ul>
-        </nav>
-        <div class="col-sm-9 col-8">
-          <div id="section1">
-            <p></p>
-            <h1>About Me</h1>
-            <p>I am an energetic, detail oriented person who takes responsibility and sees a task through. 
-              As an Engineering graduate, I am looking to gain experience in applying my skills and knowledge in various fields.
-            </p>
-            <p> I am currently part of the BriteHouse 2.0 Graduate program.
-            </p>
-          </div>
-          <div id="section2">
-            <p></p>
-            <h1>Education</h1>
-            <p></p>
-            <p></p>
-              <div class="card-columns">
-               <div class="card" style="width:300px">
-                 <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
-                 <div class="card-body">
-                 <h4 class="card-title">Tertiary Education</h4>
-                 <p class="card-text">2019</p>
-                 <p> Bachelor of Engineering in Industrial Engineering</p>
-                 <!--<a href="#" class="btn btn-primary">See Profile</a> -->
-                </div>
-               </div>
-               <div class="card" style="width:300px">
-                <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
-                <div class="card-body">
-                <h4 class="card-title">Course</h4>
-                <p class="card-text">2019</p>
-                <p> E-mobilty Monitoring and Telemetry Systems Training</p>
-                <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
-               </div>
-            </div>
+        </ul>
+      </nav>
+      <div class="col-sm-9 col-8">
+        <div id="section1">
+          <p></p>
+          <h1>About Me</h1>
+          <p>I am an energetic, detail oriented person who takes responsibility and sees a task through.
+            As an Engineering graduate, I am looking to gain experience in applying my skills and knowledge in various
+            fields.
+          </p>
+          <p> I am currently part of the BriteHouse 2.0 Graduate program.
+          </p>
+        </div>
+        <div id="section2">
+          <p></p>
+          <h1>Education</h1>
+          <p></p>
+          <p></p>
+          <div class="card-columns">
             <div class="card" style="width:300px">
               <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
               <div class="card-body">
-              <h4 class="card-title">Course</h4>
-              <p class="card-text">2019</p>
-              <p> Solar Photovoltaic Systems & E-mobility Power Systems Training</p>
-              <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
-             </div>
+                <h4 class="card-title">Tertiary Education</h4>
+                <p class="card-text">2019</p>
+                <p> Bachelor of Engineering in Industrial Engineering</p>
+                <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width:300px">
+              <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
+              <div class="card-body">
+                <h4 class="card-title">Short Course</h4>
+                <p class="card-text">2019</p>
+                <p> E-mobilty Monitoring and Telemetry Systems Training</p>
+                <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width:300px">
+              <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
+              <div class="card-body">
+                <h4 class="card-title">Short Course</h4>
+                <p class="card-text">2019</p>
+                <p> Solar Photovoltaic Systems & E-mobility Power Systems Training</p>
+                <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
+              </div>
+            </div>
+          </div>
+          <div class="card-columns">
+            <div class="card" style="width:300px">
+              <img class="card-img-top" src="images/Helpmekaar kollege logo.jpg" alt="Card image">
+              <div class="card-body">
+                <h4 class="card-title">High School</h4>
+                <p class="card-text">2014</p>
+                <p> Matric</p>
+                <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+              </div>
             </div>
           </div>
           <div id="section3">
@@ -97,7 +121,7 @@
         </div>
       </div>
     </div>
-  
-  </body>
+
+</body>
 
 </html>
