--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a class="nav-link active" href="#section2">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#section3">Past Projects</a>
+            <a class="nav-link active" href="#section3">Interesting Projects</a>
           </li>
         </ul>
       </nav>
@@ -74,8 +74,8 @@
           <p></p>
           <div class="card-columns">
             <div class="card" style="width:300px">
-              <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
-              <div class="card-body">
+             <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image"> 
+              <div class="card-body"> 
                 <h4 class="card-title">Tertiary Education</h4>
                 <p class="card-text">2019</p>
                 <p> Bachelor of Engineering in Industrial Engineering</p>
@@ -102,6 +102,7 @@
                 <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
               </div>
             </div>
+
           </div>
           <div class="card-columns">
             <div class="card" style="width:300px">
@@ -115,8 +116,24 @@
             </div>
           </div>
           <div id="section3">
-            <h1>Past Projects</h1>
-            <p>Try to scroll this page and look at the menu while scrolling!</p>
+            <h1>Interesting Projects</h1>
+            <p></p>
+            <div class="card-columns">
+              <div class="card" style="width:300px">
+               <a data-toggle="collapse" href="#uni" role="button" aria-expanded="false" aria-controls="uni">
+                 <img class="card-img-top" src="images/Andrew Mentis-edited.png" alt="Card image"></a> 
+                <div id="uni" class="card-body collapse"> 
+                  <h4 class="card-title">Final Year Project</h4>
+                  <p class="card-text">2019</p>
+                  <p> My final year project was to solve the root cause of unbalanced production flow.
+                    <p></p> 
+                    The designed solution was developed using the DMADV methodology. 
+                    The deliverable was a perfect state and an intermediate state visual Kanban system.</p>
+                  <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+                </div>
+              </div>
+            </div>
+            <p></p>
           </div>
         </div>
       </div>
