--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@
                   <!--<a href="#" class="btn btn-primary">See Profile</a> -->
                 </div>
               </div>
+              <div class="card" style="width:300px">
+                <a data-toggle="collapse" href="#uni2" role="button" aria-expanded="false" aria-controls="uni2">
+                  <img class="card-img-top" src="images/design_home_banner-1-edited.jpg" alt="Card image"></a> 
+                 <div id="uni2" class="card-body collapse"> 
+                   <h4 class="card-title">Facility dessign project</h4>
+                   <p class="card-text">2019</p>
+                   <p> For my final exam in my facility design class, I had to improve and redesign a gas cylinder facility.
+                     <p></p> 
+                     </p>
+                   <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+                 </div>
+               </div>
             </div>
             <p></p>
           </div>
