Facility design added

--- a/index.html
+++ b/index.html
@@ -121,14 +121,13 @@
             <div class="card-columns">
               <div class="card" style="width:300px">
                <a data-toggle="collapse" href="#uni" role="button" aria-expanded="false" aria-controls="uni">
-                 <img class="card-img-top" src="images/Andrew Mentis-edited.png" alt="Card image"></a> 
+                 <img class="card-img-top" src="images/Andrew Mentis-edited2.png" alt="Card image"></a> 
                 <div id="uni" class="card-body collapse"> 
                   <h4 class="card-title">Final Year Project</h4>
                   <p class="card-text">2019</p>
                   <p> My final year project was to solve the root cause of unbalanced production flow.
-                    <p></p> 
-                    The designed solution was developed using the DMADV methodology. 
-                    The deliverable was a perfect state and an intermediate state visual Kanban system.</p>
+                    <br> 
+                      The deliverable was a perfect state and an intermediate state visual Kanban system.</p>
                   <!--<a href="#" class="btn btn-primary">See Profile</a> -->
                 </div>
               </div>
@@ -136,11 +135,14 @@
                 <a data-toggle="collapse" href="#uni2" role="button" aria-expanded="false" aria-controls="uni2">
                   <img class="card-img-top" src="images/design_home_banner-1-edited.jpg" alt="Card image"></a> 
                  <div id="uni2" class="card-body collapse"> 
-                   <h4 class="card-title">Facility dessign project</h4>
+                   <h4 class="card-title">Facility design project</h4>
                    <p class="card-text">2019</p>
                    <p> For my final exam in my facility design class, I had to improve and redesign a gas cylinder facility.
                      <p></p> 
                      </p>
+                   <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+                 </div>
+               </div>
                    <!--<a href="#" class="btn btn-primary">See Profile</a> -->
                  </div>
                </div>
