--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
       </nav>
       <div class="col-sm-9 col-8">
         <div id="section1">
-          <p></p>
+          <br>
+          <br>
           <h1>About Me</h1>
           <p>I am an energetic, detail oriented person who takes responsibility and sees a task through.
             As an Engineering graduate, I am looking to gain experience in applying my skills and knowledge in various
@@ -68,14 +69,15 @@
           </p>
         </div>
         <div id="section2">
-          <p></p>
+          <br>
+          <br>
           <h1>Education</h1>
           <p></p>
           <p></p>
-          <div class="card-columns">
-            <div class="card" style="width:300px">
-             <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image"> 
-              <div class="card-body"> 
+          <div class="card-deck">
+            <div class="card">
+              <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
+              <div class="card-body">
                 <h4 class="card-title">Tertiary Education</h4>
                 <p class="card-text">2019</p>
                 <p> Bachelor of Engineering in Industrial Engineering</p>
@@ -83,7 +85,7 @@
               </div>
             </div>
 
-            <div class="card" style="width:300px">
+            <div class="card">
               <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
               <div class="card-body">
                 <h4 class="card-title">Short Course</h4>
@@ -93,7 +95,7 @@
               </div>
             </div>
 
-            <div class="card" style="width:300px">
+            <div class="card">
               <img class="card-img-top" src="images/North+West+University,+South+Africa.png" alt="Card image">
               <div class="card-body">
                 <h4 class="card-title">Short Course</h4>
@@ -102,10 +104,7 @@
                 <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
               </div>
             </div>
-
-          </div>
-          <div class="card-columns">
-            <div class="card" style="width:300px">
+            <div class="card">
               <img class="card-img-top" src="images/Helpmekaar kollege logo.jpg" alt="Card image">
               <div class="card-body">
                 <h4 class="card-title">High School</h4>
@@ -115,43 +114,60 @@
               </div>
             </div>
           </div>
+
           <div id="section3">
+            <br>
+            <br>
             <h1>Interesting Projects</h1>
             <p></p>
-            <div class="card-columns">
-              <div class="card" style="width:300px">
-               <a data-toggle="collapse" href="#uni" role="button" aria-expanded="false" aria-controls="uni">
-                 <img class="card-img-top" src="images/Andrew Mentis-edited2.png" alt="Card image"></a> 
-                <div id="uni" class="card-body collapse"> 
+            <div class="card-deck">
+              <div class="card">
+                <a data-toggle="collapse" href="#uni" role="button" aria-expanded="false" aria-controls="uni">
+                  <img class="card-img-top" src="images/Andrew Mentis-edited2.png" alt="Card image"></a>
+                <div id="uni" class="card-body collapse">
                   <h4 class="card-title">Final Year Project</h4>
                   <p class="card-text">2019</p>
                   <p> My final year project was to solve the root cause of unbalanced production flow.
-                    <br> 
-                      The deliverable was a perfect state and an intermediate state visual Kanban system.</p>
+                    <br>
+                    The deliverable was a perfect state and an intermediate state visual Kanban system.</p>
                   <!--<a href="#" class="btn btn-primary">See Profile</a> -->
                 </div>
               </div>
-              <div class="card" style="width:300px">
+              <div class="card">
                 <a data-toggle="collapse" href="#uni2" role="button" aria-expanded="false" aria-controls="uni2">
-                  <img class="card-img-top" src="images/design_home_banner-1-edited.jpg" alt="Card image"></a> 
-                 <div id="uni2" class="card-body collapse"> 
-                   <h4 class="card-title">Facility design project</h4>
-                   <p class="card-text">2019</p>
-                   <p> For my final exam in my facility design class, I had to improve and redesign a gas cylinder facility.
-                     <p></p> 
-                     </p>
-                   <!--<a href="#" class="btn btn-primary">See Profile</a> -->
-                 </div>
-               </div>
-                   <!--<a href="#" class="btn btn-primary">See Profile</a> -->
-                 </div>
-               </div>
+                  <img class="card-img-top" src="images/design_home_banner-1-edited.jpg" alt="Card image"></a>
+                <div id="uni2" class="card-body collapse">
+                  <h4 class="card-title">Facility design project</h4>
+                  <p class="card-text">2019</p>
+                  <p> For my final exam in my facility design class, I had to improve and redesign a gas cylinder
+                    facility.
+                    <p></p>
+                  </p>
+                  <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+                </div>
+              </div>
+              <div class="card">
+                <a data-toggle="collapse" href="#uni3" role="button" aria-expanded="false" aria-controls="uni3">
+                  <img class="card-img-top" src="images/Sandvik2.jpg" alt="Card image"></a>
+                <div id="uni3" class="card-body collapse">
+                  <h4 class="card-title">Gap analysis</h4>
+                  <p class="card-text">2018</p>
+                  <p> In order to gain working experience, I did a gap analysis of standard operating procedures. 
+                    This project continued for 3 weeks at Sandvik Mining and Rock Technology
+                    <p></p>
+                  </p>
+                  <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+                </div>
+              </div>
+              <!--<a href="#" class="btn btn-primary">See Profile</a> -->
             </div>
-            <p></p>
           </div>
         </div>
+        <p></p>
       </div>
     </div>
+  </div>
+  </div>
 
 </body>
 
