--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="css/indexCSS.css">
+
   <title>Marlene's profile</title>
 </head>
 
 <body>
-  <div class="jumbotron text-center" style="margin-bottom:0">
-    <h1> <img src="images/Professional photo - M Eddie.jpg" width="180" height="250" class="rounded" alt=""> Marléne
-      Eddie</h1>
+  <div class= "bg"></div>
+  <div class="jumbotron text-left text-bold text-black " style="margin-bottom:0">
+    <h1> <img src="images/Professional photo - M Eddie.jpg" width="180" height="250" class="rounded-circle" alt=""> Marléne
+      Eddie </h1>
   </div>
   <nav class="navbar navbar-light bg-light">
     <span class="navbar-text">
       Please follow the links for more information:
-      <a href="https://www.Linkedin.com/in/marléne-eddie-1988ab139"> LinkedIn </a>
-      <a href="https://github.com/MarleneEddie"> Github </a>
+      <a class="p-2" href="https://www.Linkedin.com/in/marléne-eddie-1988ab139"> LinkedIn </a>
+      <a class="p-2" href="https://github.com/MarleneEddie"> Github </a>
+      <a href="files/Marléne_Eddie_CV_.pdf"> View my CV </a>
     </span>
   </nav>
 
@@ -37,13 +41,14 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
-</body>
 
-<body data-spy="scroll" data-target="#myScrollspy" data-offset="1">
+
+
 
   <div class="container-fluid">
+    
     <div class="row">
-      <nav class="col-sm-3 col-4" id="myScrollspy">
+      <div class="col-lg-3" id="myScrollspy">
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
             <a class="nav-link active" href="#section1">Get To Know Me</a>
@@ -55,8 +60,10 @@
             <a class="nav-link active" href="#section3">Interesting Projects</a>
           </li>
         </ul>
-      </nav>
+      </div>  
+      <!-- <div class="col-lg-3 invisible">filler text</div> -->
       <div class="col-sm-9 col-8">
+        <div  data-spy="scroll" data-target="#myScrollspy" data-offset="1">
         <div id="section1">
           <br>
           <br>
@@ -115,55 +122,57 @@
             </div>
           </div>
 
-          <div id="section3">
-            <br>
-            <br>
-            <h1>Interesting Projects</h1>
-            <p></p>
-            <div class="card-deck">
-              <div class="card">
-                <a data-toggle="collapse" href="#uni" role="button" aria-expanded="false" aria-controls="uni">
-                  <img class="card-img-top" src="images/Andrew Mentis-edited2.png" alt="Card image"></a>
-                <div id="uni" class="card-body collapse">
-                  <h4 class="card-title">Final Year Project</h4>
-                  <p class="card-text">2019</p>
-                  <p> My final year project was to solve the root cause of unbalanced production flow.
-                    <br>
-                    The deliverable was a perfect state and an intermediate state visual Kanban system.</p>
-                  <!--<a href="#" class="btn btn-primary">See Profile</a> -->
-                </div>
+          
+        </div>
+
+        <div id="section3">
+          <br>
+          <br>
+          <h1>Interesting Projects</h1>
+          <p></p>
+          <div class="card-deck">
+            <div class="card">
+              <a data-toggle="collapse" href="#uni" role="button" aria-expanded="false" aria-controls="uni">
+                <img class="card-img-top" src="images/Andrew Mentis-edited2.png" alt="Card image"></a>
+              <div id="uni" class="card-body collapse">
+                <h4 class="card-title">Final Year Project</h4>
+                <p class="card-text">2019</p>
+                <p> My final year project was to solve the root cause of unbalanced production flow.
+                  <br>
+                  The deliverable was a perfect state and an intermediate state visual Kanban system.</p>
+                <!--<a href="#" class="btn btn-primary">See Profile</a> -->
               </div>
-              <div class="card">
-                <a data-toggle="collapse" href="#uni2" role="button" aria-expanded="false" aria-controls="uni2">
-                  <img class="card-img-top" src="images/design_home_banner-1-edited.jpg" alt="Card image"></a>
-                <div id="uni2" class="card-body collapse">
-                  <h4 class="card-title">Facility design project</h4>
-                  <p class="card-text">2019</p>
-                  <p> For my final exam in my facility design class, I had to improve and redesign a gas cylinder
-                    facility.
-                    <p></p>
-                  </p>
-                  <!--<a href="#" class="btn btn-primary">See Profile</a> -->
-                </div>
-              </div>
-              <div class="card">
-                <a data-toggle="collapse" href="#uni3" role="button" aria-expanded="false" aria-controls="uni3">
-                  <img class="card-img-top" src="images/Sandvik2.jpg" alt="Card image"></a>
-                <div id="uni3" class="card-body collapse">
-                  <h4 class="card-title">Gap analysis</h4>
-                  <p class="card-text">2018</p>
-                  <p> In order to gain working experience, I did a gap analysis of standard operating procedures. 
-                    This project continued for 3 weeks at Sandvik Mining and Rock Technology
-                    <p></p>
-                  </p>
-                  <!--<a href="#" class="btn btn-primary">See Profile</a> -->
-                </div>
-              </div>
-              <!--<a href="#" class="btn btn-primary">See Profile</a> -->
             </div>
+            <div class="card">
+              <a data-toggle="collapse" href="#uni2" role="button" aria-expanded="false" aria-controls="uni2">
+                <img class="card-img-top" src="images/design_home_banner-1-edited.jpg" alt="Card image"></a>
+              <div id="uni2" class="card-body collapse">
+                <h4 class="card-title">Facility design project</h4>
+                <p class="card-text">2019</p>
+                <p> For my final exam in my facility design class, I had to improve and redesign a gas cylinder
+                  facility.
+                  <p></p>
+                </p>
+                <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+              </div>
+            </div>
+            <div class="card">
+              <a data-toggle="collapse" href="#uni3" role="button" aria-expanded="false" aria-controls="uni3">
+                <img class="card-img-top" src="images/Sandvik2.jpg" alt="Card image"></a>
+              <div id="uni3" class="card-body collapse">
+                <h4 class="card-title">Gap analysis</h4>
+                <p class="card-text">2018</p>
+                <p> In order to gain working experience, I did a gap analysis of standard operating procedures. 
+                  This project continued for 3 weeks at Sandvik Mining and Rock Technology
+                  <p></p>
+                </p>
+                <!--<a href="#" class="btn btn-primary">See Profile</a> -->
+              </div>
+            </div>
+            <!--<a href="#" class="btn btn-primary">See Profile</a> -->
           </div>
         </div>
-        <p></p>
+      </div>
       </div>
     </div>
   </div>
