Fixed header for mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <body>
   <div class= "bg"></div>
   <div class="jumbotron text-left text-bold text-black " style="margin-bottom:0">
-    <h1> <img src="images/Professional photo - M Eddie.jpg" width="180" height="250" class="rounded-circle" alt=""> Marléne
+    <img src="images/Professional photo - M Eddie.jpg" width="180" height="250" class="rounded-circle" alt="">
+    <h1> Marléne
       Eddie </h1>
   </div>
   <nav class="navbar navbar-light bg-light">
