--- a/index.html
+++ b/index.html
@@ -159,9 +159,11 @@
                 </div>  
               </div>
           </div>
+        </section>
     <!--====================================================
                         PROJECTS
     ======================================================-->  		  
+    <section class="resume-section p-3 p-lg-5 " id="project">
           <div class="row my-auto">
               <div class="col-12">
                 <h2 class="  text-center">Interesting Projects</h2>
