--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="card mx-0 p-4 mb-5" style="border-color: #2196f3; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class="resume-content mr-auto">
                       <h4 class="mb-3"><i class="fa fa-area-chart mr-3 text-primary"></i> High School</h4>
-                      <p>Matriculant: National Senior Certificate from Help Mekaar College</p>
+                      <p>Matriculant: National Senior Certificate from Helpmekaar Kollege</p>
                   </div>
                   <div class="resume-date text-md-right">
                       <span class="text-primary">2014</span>
