--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
     <!--====================================================
                         EDUCATION
     ======================================================-->
-    <section class="resume-section p-3 p-lg-5 " id="education">
+    <section id="education">
       <div class="row my-auto">
         <div class="col-12">
-          <h2 class="  text-center">Education</h2>
+          <h2 class="text-center">Education</h2>
           <div class="mb-5 heading-border"></div>
         </div>
         <div class="resume-item col-md-6 col-sm-12 ">
@@ -179,7 +179,8 @@
         </div>
       </div>
     </section>
-
+    <br/>
+    <hr>
     <!--====================================================
                         Certifications
     ======================================================-->
