--- a/index.html
+++ b/index.html
@@ -141,11 +141,12 @@
                   <p class="text-right">2019</p>
                 </div>
               </div>
-              <!-- <p>
+            </div>
+            <!-- <p>
                 <span>View Matric Certificate</span>
                 <span text="align-right">2014</span>
               </p> -->
-            </div>
+
             <!-- <div class="resume-date text-md-right">
               <span class="text-primary">2019</span>
             </div> -->
@@ -179,7 +180,7 @@
         </div>
       </div>
     </section>
-    <br/>
+    <br />
     <hr>
     <!--====================================================
                         Certifications
@@ -197,8 +198,18 @@
               <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i> Short Course</h4>
               <p>E-mobilty Monitoring and Telemetry Systems Training</p>
             </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">2019</span>
+            <div class="resume-date text-primary justify-context-between">
+              <div class="row">
+                <div class="col-md-4">
+                  <p>View</p>
+                </div>
+                <div class="col-md-4">
+                </div>
+
+                <div class="col-md-4">
+                  <p class="text-right">2019</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -208,8 +219,18 @@
               <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Short Course</h4>
               <p>Solar Photovoltaic Systems & E-mobility Power Systems Training</p>
             </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">2019</span>
+            <div class="resume-date text-primary justify-context-between">
+              <div class="row">
+                <div class="col-md-4">
+                  <p>View</p>
+                </div>
+                <div class="col-md-4">
+                </div>
+
+                <div class="col-md-4">
+                  <p class="text-right">2019</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
