--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p>View</p>
+                  <p> <a href=""> View </a></p>
                 </div>
                 <div class="col-md-4">
                 </div>
@@ -161,7 +161,7 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p>View</p>
+                  <p> <a href="">View </a> </p>
                 </div>
                 <div class="col-md-4">
                 </div>
@@ -201,7 +201,7 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p>View</p>
+                  <p><a href="">View</a></p>
                 </div>
                 <div class="col-md-4">
                 </div>
@@ -222,7 +222,7 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p>View</p>
+                  <p> <a href="">View </a> </p>
                 </div>
                 <div class="col-md-4">
                 </div>
@@ -242,7 +242,7 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p>View</p>
+                  <p> <a href="">View </a> </p>
                 </div>
                 <div class="col-md-4">
                 </div>
@@ -262,7 +262,7 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p>View</p>
+                  <p> <a href=""> View </a> </p>
                 </div>
                 <div class="col-md-4">
                 </div>
