--- a/index.html
+++ b/index.html
@@ -273,6 +273,26 @@
             </div>
           </div>
         </div>
+        <div class="resume-item col-md-6 col-sm-12">
+          <div class="card mx-0 p-4 mb-5" style="border-color: #28a745; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
+            <div class="resume-content mr-auto">
+              <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Short Course</h4>
+              <p>Code School: Try SQL</p>
+            </div>
+            <div class="resume-date text-primary justify-context-between">
+              <div class="row">
+                <div class="col-md-4">
+                  <p> <a href=""> View </a> </p>
+                </div>
+                <div class="col-md-4">
+                </div>
+                <div class="col-md-4">
+                  <p class="text-right">2020</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <!--====================================================
