--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="resume-item col-md-6 col-sm-12">
           <div class="card mx-0 p-4 mb-5" style="border-color: #ffc107; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
             <div class="resume-content mr-auto">
-              <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i> Short Course</h4>
+              <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i> Short Course: North-West University</h4>
               <p>E-mobilty Monitoring and Telemetry Systems Training</p>
             </div>
             <div class="resume-date text-primary justify-context-between">
@@ -216,7 +216,7 @@
         <div class="resume-item col-md-6 col-sm-12">
           <div class="card mx-0 p-4 mb-5" style="border-color: #28a745; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
             <div class="resume-content mr-auto">
-              <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Short Course</h4>
+              <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Short Course: North-West University</h4>
               <p>Solar Photovoltaic Systems & E-mobility Power Systems Training</p>
             </div>
             <div class="resume-date text-primary justify-context-between">
@@ -236,7 +236,7 @@
         <div class="resume-item col-md-6 col-sm-12">
           <div class="card mx-0 p-4 mb-5" style="border-color: #28a745; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
             <div class="resume-content mr-auto">
-              <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Short Course</h4>
+              <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Short Course: Pluralsight</h4>
               <p>HTML, CSS, and JavaScript: The Big Picture</p>
             </div>
             <div class="resume-date text-primary justify-context-between">
@@ -256,7 +256,7 @@
         <div class="resume-item col-md-6 col-sm-12">
           <div class="card mx-0 p-4 mb-5" style="border-color: #28a745; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
             <div class="resume-content mr-auto">
-              <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Short Course</h4>
+              <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Short Course: Pluralsight</h4>
               <p>Python: The Big Picture</p>
             </div>
             <div class="resume-date text-primary justify-context-between">
@@ -276,7 +276,7 @@
         <div class="resume-item col-md-6 col-sm-12">
           <div class="card mx-0 p-4 mb-5" style="border-color: #28a745; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
             <div class="resume-content mr-auto">
-              <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Short Course</h4>
+              <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Short Course: Pluralsight</h4>
               <p>Code School: Try SQL</p>
             </div>
             <div class="resume-date text-primary justify-context-between">
