Plain hover-over

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           applying my skills and knowledge in various fields.</p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
-            <a href="https://www.Linkedin.com/in/marléne-eddie-1988ab139"">
+            <a href="https://www.Linkedin.com/in/marléne-eddie-1988ab139" title="LinkedIn profile">
                   <span class=" fa-stack fa-lg">
               <i class="fa fa-circle fa-stack-2x"></i>
               <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -96,7 +96,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://github.com/MarleneEddie">
+            <a href="https://github.com/MarleneEddie" title = "GitHub account">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -104,7 +104,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="files/Marléne_Eddie_CV_.pdf">
+            <a href="files/Marléne_Eddie_CV_.pdf" title="View my CV">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-book fa-stack-1x fa-inverse"></i>
