--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p> <a href=""> View </a></p>
+                  <p> <a href="files\B Ing NWU M Eddie.pdf"> View </a></p>
                 </div>
                 <div class="col-md-4">
                 </div>
@@ -161,7 +161,7 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p> <a href="">View </a> </p>
+                  <p> <a href=""> </a> </p>
                 </div>
                 <div class="col-md-4">
                 </div>
