--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </div>
         </div>
         <div class="resume-item col-md-6 col-sm-12">
-          <div class="card mx-0 p-4 mb-5" style="border-color: #2196f3; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
+          <div class="card mx-0 p-4 mb-5" style="border-color: #17a2b8; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
             <div class="resume-content mr-auto">
               <h4 class="mb-3"><i class="fa fa-area-chart mr-3 text-info"></i> High School</h4>
               <p>Matriculant: National Senior Certificate from Helpmekaar Kollege</p>
