--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p> <a href="files\B Ing NWU M Eddie.pdf"> View </a></p>
+                  <p> <a href="files\B Ing NWU M Eddie.pdf" style="color: #17a2b8;"> View </a></p>
                 </div>
                 <div class="col-md-4">
                 </div>
 
                 <div class="col-md-4">
-                  <p class="text-right">2019</p>
+                  <p class="text-right" style="color: #17a2b8;">2019</p>
                 </div>
               </div>
             </div>
@@ -167,7 +167,7 @@
                 </div>
 
                 <div class="col-md-4">
-                  <p class="text-right">2014</p>
+                  <p class="text-right" style="color: #17a2b8;">2014</p>
                 </div>
               </div>
               <!-- <p>
