NWU Short course

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p><a href="">View</a></p>
+                  <p><a href="files\E-mobility Monitoring.pdf">View</a></p>
                 </div>
                 <div class="col-md-4">
                 </div>
@@ -222,7 +222,7 @@
             <div class="resume-date text-primary justify-context-between">
               <div class="row">
                 <div class="col-md-4">
-                  <p> <a href="">View </a> </p>
+                  <p> <a href="files\Solar Photovoltaic.pdf">View </a> </p>
                 </div>
                 <div class="col-md-4">
                 </div>
